register output schedule
